--- a/public/js/app/templates/details.html
+++ b/public/js/app/templates/details.html
@@ -37,11 +37,26 @@
 
             <p>Your confirmation will be sent to the email you provide. Your information will not be distributed in any way.</p>
 
+            <hr>
+
+            <h3>Will you attend?</h3>
+
+                <form role="form">
+
+                    <div class="form-group">
+                    <input type="radio" name="attend" id="attendYes" value="attendYes">
+                    <label data-message="" data-title="" class="tt" for="attendYes">Yes</label>
+                    </div>
+
+                    <div class="form-group">
+                    <input type="radio" name="attend" id="attendNo" value="attendNo">
+                    <label data-message="" data-title="" class="tt" for="attendNo">No</label>
+                    </div>
+
+                </form>
+
         </div>
+
     </div>
-
-    <form>
-
-    </form>
 
 </div>
