--- a/public/js/app/templates/pay.html
+++ b/public/js/app/templates/pay.html
@@ -2,7 +2,7 @@
 
     <hr>
 
-    <h3>Donate:</h3>
+    <h3>Personal Note:</h3>
 
     <hr>
 
@@ -10,7 +10,15 @@
 
         <div class="col-xs-12 col-sm-8">
 
-             <div class="row">
+            <form role="form">
+                <div class="form-group">
+                    <textarea class="form-control" id="personalMessage" rows="5" placeholder="Leave a personal note for Jani and Lewis."></textarea>
+                </div>
+            </form>
+
+
+
+<!--              <div class="row">
                 <div class="col-xs-12 col-sm-3">
                     <div class="form-group">
                         <label for="visa" style="white-space: nowrap;">Visa</label>
@@ -101,15 +109,15 @@
                 <div class="col-xs-4">
                     <div class="form-group">
                         <label for="openSelector" data-message='Your donation will go to towards the goal of your choosing in the "Patron" section' data-title="OPEN - Contribution Details" class="tt">OPEN DONATION</label>
-                        <input type="radio" name="payTier" id="openSelector" value="154.80">
+                        <input type="radio" name="payTier" id="openSelector" value="1.00">
                         <input type="number" name="payTier" id="open" class="payTier form-control" placeholder="$ Donation Amount">
                     </div>
                 </div>
             </div>
-
+ -->
             <div class="row">
                 <div class="col-xs-12">
-                    <button id="donate" class="btn btn-primary pull-right" style="margin-top:20px;"><i class="fa fa-heart"></i> Donate</button>
+                    <button id="donate" class="btn btn-primary pull-right" style="margin-top:20px;"><i class="fa fa-heart"></i> Confirm</button>
                 </div>
             </div>
             <div class="row">
@@ -123,10 +131,8 @@
 
         <div class="col-xs-12 col-sm-4">
 
-            <p>Thank you so much for your support! (Paypal's processing fee is 2.9% + $0.30)</br></br>
-            Your credit card information is secured by an SSL (Secure Socket Layer) connection to Paypal, where your donation will be processed. All your sensitive information is encrypeted when it leaves your browser :)</p>
+            <p>Thank you so much for your RSVP! Please click the "Confirm" button below to receive your confirmation email.</p>
 
-            <hr>
 
             <h4 class="payTier-title"></h4>
             <p class="payTier-description"></p>
