latest updates to copy etc and beginning of goole spreadsheet functionality

--- a/public/js/app/templates/details.html
+++ b/public/js/app/templates/details.html
@@ -7,24 +7,29 @@
         <div class="col-xs-12 col-sm-6">
             <form role="form">
                 <div class="form-group">
+                    <label data-message="" data-title="" class="" for="">Name of your Party</label>
                     <input type="text" class="form-control" id="party-name" placeholder="Name of your Party">
                 </div>
                 <div class="form-group">
+                    <label data-message="" data-title="" class="" for="">Email</label>
                     <input type="email" class="form-control" id="email" placeholder="Best Email to Contact You">
                 </div>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group">
-                            <input type="number" class="form-control" id="num-adults" placeholder="Number of Adults">
+                            <label data-message="" data-title="" class="" for="">Adults</label>
+                            <input type="number" min="1" class="form-control" id="num-adults" placeholder="Number of Adults">
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group">
-                            <input type="number" class="form-control" id="num-kids" placeholder="Number of Kids">
+                            <label data-message="" data-title="" class="" for="">Kids</label>
+                            <input type="number" min="0" class="form-control" id="num-kids" placeholder="Number of Kids">
                         </div>
                     </div>
                     <div class="col-xs-12 col-sm-6 col-sm-offset-6">
                         <div class="form-group">
+                            <label data-message="" data-title="" class="" for="">Age</label>
                             <input type="text" class="form-control" id="age-kids" placeholder="Age of Kids">
                         </div>
                     </div>
