--- a/public/js/app/templates/jobs.html
+++ b/public/js/app/templates/jobs.html
@@ -155,6 +155,42 @@
 
             <div class="col-xs-12 col-sm-3">
 
+                <h3>Patron</h3>
+
+                <hr>
+
+                <form role="form">
+
+                    <div class="form-group">
+                        <input type="radio" name="jobs" id="patronDrink" value="patronDrink">
+                         <label data-message="Contribute behind the scenes in the spirit of Bacchus." data-title="Patron of the Drink" class="tt" for="patronDrink">Patron of the Drink</label>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="radio" name="jobs" id="chocolateBar" value="chocolateBar">
+                        <label data-message='Contribute to the making of a yummy "chocolate bar" curated by Liz.' data-title="Chocolate Bar" class="tt" for="chocolateBar">Chocolate Bar</label>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="radio" name="jobs" id="sundayBrunch" value="sundayBrunch">
+                         <label data-message="No work to do, you can donate to support our sunday brunch." data-title="Sunday Brunch" class="tt" for="sundayBrunch">Sunday Brunch</label>
+                    </div>
+
+                    <div class="form-group">
+                        <input type="radio" name="jobs" id="pond" value="pond">
+                        <label data-message="Contribute to helping us renovate our pond so the next time you come we can all swim!" data-title="Swimming Hole" class="tt" for="pond">Swimming Hole</label>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="openSelector" data-message='We are working to focus our energy on making the Farm even better than it is, so if you have ideas please share.' data-title="Your Idea Here" class="tt">Your Idea here</label>
+                        <input type="radio" name="jobs" id="yourIdea3">
+                        <input type="text" name="jobs" id="yourIdea3" class="form-control" placeholder="Your Idea Here">
+                    </div>
+
+                </form>
+
+                <hr>
+                
                 <h3>Potluck</h3>
 
                 <hr>                
@@ -197,48 +233,15 @@
 
                 </form>
 
-                <hr>
-
-                <h3>Patron</h3>
-
-                <hr>
-
-                <form role="form">
-
-                    <div class="form-group">
-                        <input type="radio" name="jobs" id="patronDrink" value="patronDrink">
-                         <label data-message="Contribute behind the scenes in the spirit of Bacchus." data-title="Patron of the Drink" class="tt" for="patronDrink">Patron of the Drink</label>
-                    </div>
-
-                    <div class="form-group">
-                        <input type="radio" name="jobs" id="chocolateBar" value="chocolateBar">
-                        <label data-message='Contribute to the making of a yummy "chocolate bar" curated by Liz.' data-title="Chocolate Bar" class="tt" for="chocolateBar">Chocolate Bar</label>
-                    </div>
-
-                    <div class="form-group">
-                        <input type="radio" name="jobs" id="sundayBrunch" value="sundayBrunch">
-                         <label data-message="No work to do, you can donate to support our sunday brunch." data-title="Sunday Brunch" class="tt" for="sundayBrunch">Sunday Brunch</label>
-                    </div>
-
-                    <div class="form-group">
-                        <input type="radio" name="jobs" id="pond" value="pond">
-                        <label data-message="Contribute to helping us renovate our pond so the next time you come we can all swim!" data-title="Swimming Hole" class="tt" for="pond">Swimming Hole</label>
-                    </div>
-
-                    <div class="form-group">
-                        <label for="openSelector" data-message='We are working to focus our energy on making the Farm even better than it is, so if you have ideas please share.' data-title="Your Idea Here" class="tt">Your Idea here</label>
-                        <input type="radio" name="jobs" id="yourIdea3">
-                        <input type="text" name="jobs" id="yourIdea3" class="form-control" placeholder="Your Idea Here">
-                    </div>
-
-                </form>
-
             </div>
 
         <div class="col-xs-12 col-sm-6">
 
-            <p>This is a family affair and in lieu of traditional gifts we ask you to participate in one of 3 ways.</p>
+            <p>This is a family affair and in lieu of traditional gifts we would love for you to participate and/or patron in any of these ways.</p>
 
+            <p>Feel free to choose more than one.</p>
+
+            <p style="font-style: italic;">(Click for description)</p>
             <br/>
             
             <h4 class="job-title"></h4>
