--- a/public/js/app/templates/Index.html
+++ b/public/js/app/templates/Index.html
@@ -31,7 +31,7 @@
 
 			<div class="row">
 				<div class="col-xs-12">
-					<a href="#signup" class="btn btn-lg btn-warning">Click here to RSVP</a>
+					<a href="#signup" class="btn btn-lg btn-warning">Click here to RSVP by April 23</a>
 				</div>
 			</div>
 
