--- a/public/js/app/templates/food.html
+++ b/public/js/app/templates/food.html
@@ -14,12 +14,12 @@
 
                 <div class="form-group">
                     <input type="radio" name="jobs" id="arrival1">
-                    <label data-message="" data-title="Thursday 7/21" class="tt" for="arrival1">Thursday 7/21</label>
+                    <label data-message="Family, Crew, and Out of Town" data-title="Thursday 7/21" class="tt" for="arrival1">Thursday 7/21</label>
                 </div>
 
                 <div class="form-group">
                     <input type="radio" name="jobs" id="arrival2">
-                    <label data-message="" data-title="Friday 7/22" class="tt" for="arrival2">Friday 7/22</label>
+                    <label data-message="Family, Crew, and Out of Town" data-title="Friday 7/22" class="tt" for="arrival2">Friday 7/22</label>
                 </div>
 
                 <div class="form-group">
@@ -56,7 +56,7 @@
                          <label data-message="Please choose another option." data-title="RV" class="tt red" for="accommodation2">RV (<%= accommodation2 %>)</label>
                     <% } else { %>
                         <input type="radio" name="jobs" id="accommodation2">
-                         <label data-message="" data-title="RV" class="tt" for="accommodation2">RV (<%= accommodation2 %>)</label>
+                         <label data-message="RVs are limited in number." data-title="RV" class="tt" for="accommodation2">RV (<%= accommodation2 %>)</label>
                     <% } %>
 
                 </div>
