--- a/public/js/app/templates/food.html
+++ b/public/js/app/templates/food.html
@@ -15,11 +15,13 @@
                 <div class="form-group">
                     <input type="radio" name="jobs" id="arrival1">
                     <label data-message="Family, Crew, and Out of Town" data-title="Thursday 7/21" class="tt" for="arrival1">Thursday 7/21</label>
+                    <p style="font-style: italic;">Family, Crew, and Out of Town</p>
                 </div>
 
                 <div class="form-group">
                     <input type="radio" name="jobs" id="arrival2">
                     <label data-message="Family, Crew, and Out of Town" data-title="Friday 7/22" class="tt" for="arrival2">Friday 7/22</label>
+                    <p style="font-style: italic;">Family, Crew, and Out of Town</p>
                 </div>
 
                 <div class="form-group">
