--- a/public/js/app/templates/jobs.html
+++ b/public/js/app/templates/jobs.html
@@ -14,10 +14,10 @@
 
                     <div class="form-group">
                         <% if(performer === 0) { %>
-                            <input type="radio" name="jobs" id="performer" disabled>
+                            <input type="checkbox" name="participate" id="performer" disabled>
                              <label data-message="Please choose another option." data-title="Performer" class="tt red" for="performer">Performer</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="performer" value="performer">
+                            <input type="checkbox" name="participate" id="performer" value="performer">
                              <label data-message="Want to play music? Fire dance?  Create an installation? Let us know!" data-title="Performer" class="tt" for="performer">Performer (<%= performer %>)</label>
                         <% } %>
 
@@ -25,10 +25,10 @@
 
                     <div class="form-group">
                         <% if(lead === 0) { %>
-                            <input type="radio" name="jobs" id="lead" disabled>
+                            <input type="checkbox" name="participate" id="lead" disabled>
                             <label data-message="Please choose another option." data-title="Lead" class="tt red" for="lead">Lead (<%= lead %>)</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="lead" value="lead">
+                            <input type="checkbox" name="participate" id="lead" value="lead">
                             <label data-message="Got management skills? Want to be a team lead for a committee? We definitely need you!" data-title="Lead" class="tt" for="lead">Lead (<%= lead %>)</label>
                         <% } %>
 
@@ -36,10 +36,10 @@
 
                     <div class="form-group">
                         <% if(drumCircle === 0) { %>
-                            <input type="radio" name="jobs" id="drumCircle" disabled>
+                            <input type="checkbox" name="participate" id="drumCircle" disabled>
                             <label data-message="Please choose another option." data-title="Drum Circle" class="tt red" for="drumCircle">Drum Circle (<%= drumCircle %>)</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="drumCircle" value="drumCircle">
+                            <input type="checkbox" name="participate" id="drumCircle" value="drumCircle">
                             <label data-message="Bring your drum! Help us organize and create an epic late night drum circle!" data-title="Drum Circle" class="tt" for="drumCircle">Drum Circle (<%= drumCircle %>)</label>
                         <% } %>
 
@@ -47,10 +47,10 @@
 
                     <div class="form-group">
                         <% if(tech === 0) { %>
-                            <input type="radio" name="jobs" id="tech" disabled>
+                            <input type="checkbox" name="participate" id="tech" disabled>
                              <label data-message="Please choose another option." data-title="Tech" class="tt red" for="tech">Tech (<%= tech %>)</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="tech" value="tech">
+                            <input type="checkbox" name="participate" id="tech" value="tech">
                              <label data-message="Help us with sound system, lighting projection, any tech issues during wedding set-up and helping maintain during the party." data-title="Tech" class="tt" for="tech">Tech (<%= tech %>)</label>
                         <% } %>
 
@@ -58,20 +58,20 @@
 
                     <div class="form-group">
                         <% if(setup === 0) { %>
-                            <input type="radio" name="jobs" id="setup" disabled>
+                            <input type="checkbox" name="participate" id="setup" disabled>
                             <label data-message="Please choose another option." data-title="Setup" class="tt red" for="setup">Setup (<%= setup %>)</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="setup" value="setup">
+                            <input type="checkbox" name="participate" id="setup" value="setup">
                             <label data-message="Come early! Help us set up before the wedding on Saturday." data-title="Setup" class="tt" for="setup">Setup (<%= setup %>)</label>
                         <% } %>
                     </div>
 
                     <div class="form-group">
                         <% if(breakdown === 0) { %>
-                            <input type="radio" name="jobs" id="breakdown" disabled>
+                            <input type="checkbox" name="participate" id="breakdown" disabled>
                             <label data-message="Please choose another option." data-title="Breakdown" class="tt red" for="breakdown">Breakdown (<%= breakdown %>)</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="breakdown" value="breakdown">
+                            <input type="checkbox" name="participate" id="breakdown" value="breakdown">
                             <label data-message="Stay late for a chill afterparty... while we restore order." data-title="Breakdown" class="tt" for="breakdown">Breakdown (<%= breakdown %>)</label>
                         <% } %>
 
@@ -79,10 +79,10 @@
 
                     <div class="form-group">
                         <% if(lighting === 0) { %>
-                            <input type="radio" name="jobs" id="lighting" disabled>
+                            <input type="checkbox" name="participate" id="lighting" disabled>
                              <label data-message="Please choose another option." data-title="Lighting" class="tt red" for="lighting">Lighting (<%= lighting %>)</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="lighting" value="lighting">
+                            <input type="checkbox" name="participate" id="lighting" value="lighting">
                              <label data-message="Help decorate the land with candles, tikis, lighting, etc." data-title="Lighting" class="tt" for="lighting">Lighting (<%= lighting %>)</label>
                         <% } %>
 
@@ -90,10 +90,10 @@
 
                     <div class="form-group">
                         <% if(decoration === 0) { %>
-                            <input type="radio" name="jobs" id="decoration" disabled>
+                            <input type="checkbox" name="participate" id="decoration" disabled>
                              <label data-message="Please choose another option." data-title="Decoration" class="tt red" for="decoration">Decoration (<%= decoration %>)</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="decoration" value="decoration">
+                            <input type="checkbox" name="participate" id="decoration" value="decoration">
                              <label data-message="Come early and help decorate the land with drapery, cloth, etc." data-title="Decoration" class="tt" for="decoration">Decoration (<%= decoration %>)</label>
                         <% } %>
 
@@ -101,10 +101,10 @@
 
                     <div class="form-group">
                         <% if(flowerArranging === 0) { %>
-                            <input type="radio" name="jobs" id="flowerArranging" disabled>
+                            <input type="checkbox" name="participate" id="flowerArranging" disabled>
                              <label data-message="Please choose another option." data-title="Flower Arranging" class="tt red" for="flowerArranging">Flower Arranging (<%= flowerArranging %>)</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="flowerArranging" value="flowerArranging">
+                            <input type="checkbox" name="participate" id="flowerArranging" value="flowerArranging">
                              <label data-message="Come early and help pick flowers and do flower arrangements." data-title="Flower Arranging" class="tt" for="flowerArranging">Flower Arranging (<%= flowerArranging %>)</label>
                         <% } %>
 
@@ -112,10 +112,10 @@
 
                     <div class="form-group">
                         <% if(fire === 0) { %>
-                            <input type="radio" name="jobs" id="fire" disabled>
+                            <input type="checkbox" name="participate" id="fire" disabled>
                              <label data-message="Please choose another option." data-title="Fire" class="tt red" for="fire">Fire (<%= fire %>)</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="fire" value="fire">
+                            <input type="checkbox" name="participate" id="fire" value="fire">
                              <label data-message="Help care for the fires throughout the weekend." data-title="Fire" class="tt" for="fire">Fire (<%= fire %>)</label>
                         <% } %>
 
@@ -123,10 +123,10 @@
 
                     <div class="form-group">
                         <% if(altars === 0) { %>
-                            <input type="radio" name="jobs" id="altars" disabled>
+                            <input type="checkbox" name="participate" id="altars" disabled>
                              <label data-message="Please choose another option." data-title="Altars" class="tt red" for="altars">Altars (<%= altars %>)</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="altars" value="altars">
+                            <input type="checkbox" name="participate" id="altars" value="altars">
                              <label data-message="Come early and help create the altars around the farm and maintain throughout night." data-title="Altars" class="tt" for="altars">Altars (<%= altars %>)</label>
                         <% } %>
 
@@ -134,10 +134,10 @@
 
                     <div class="form-group">
                         <% if(host === 0) { %>
-                            <input type="radio" name="jobs" id="host" disabled>
+                            <input type="checkbox" name="participate" id="host" disabled>
                              <label data-message="Please choose another option." data-title="Host" class="tt red" for="host">Host (<%= host %>)</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="host" value="host">
+                            <input type="checkbox" name="participate" id="host" value="host">
                              <label data-message="CleHelp us hold the space and share good farm hospitatlity with our friends and family." data-title="Host" class="tt" for="host">Host (<%= host %>)</label>
                         <% } %>
 
@@ -145,8 +145,8 @@
 
                     <div class="form-group">
                         <label for="openSelector" data-message='Want to participate in a way not mentioned above? Write it here!' data-title="Your Idea Here" class="tt">Your Idea here</label>
-                        <input type="radio" name="jobs" id="yourIdea1">
-                        <input type="text" name="jobs" id="yourIdea1" class="form-control" placeholder="Your Idea Here">
+                        <input type="checkbox" name="participate" id="yourIdea1">
+                        <input type="text" name="participate" id="yourIdea1" class="form-control" placeholder="Your Idea Here">
                     </div>
 
                 </form>
@@ -162,29 +162,29 @@
                 <form role="form">
 
                     <div class="form-group">
-                        <input type="radio" name="jobs" id="patronDrink" value="patronDrink">
+                        <input type="checkbox" name="patron" id="patronDrink" value="patronDrink">
                          <label data-message="Contribute behind the scenes in the spirit of Bacchus." data-title="Patron of the Drink" class="tt" for="patronDrink">Patron of the Drink</label>
                     </div>
 
                     <div class="form-group">
-                        <input type="radio" name="jobs" id="chocolateBar" value="chocolateBar">
+                        <input type="checkbox" name="patron" id="chocolateBar" value="chocolateBar">
                         <label data-message='Contribute to the making of a yummy "chocolate bar" curated by Liz.' data-title="Chocolate Bar" class="tt" for="chocolateBar">Chocolate Bar</label>
                     </div>
 
                     <div class="form-group">
-                        <input type="radio" name="jobs" id="sundayBrunch" value="sundayBrunch">
+                        <input type="checkbox" name="patron" id="sundayBrunch" value="sundayBrunch">
                          <label data-message="No work to do, you can donate to support our sunday brunch." data-title="Sunday Brunch" class="tt" for="sundayBrunch">Sunday Brunch</label>
                     </div>
 
                     <div class="form-group">
-                        <input type="radio" name="jobs" id="pond" value="pond">
+                        <input type="checkbox" name="patron" id="pond" value="pond">
                         <label data-message="Contribute to helping us renovate our pond so the next time you come we can all swim!" data-title="Swimming Hole" class="tt" for="pond">Swimming Hole</label>
                     </div>
 
                     <div class="form-group">
                         <label for="openSelector" data-message='We are working to focus our energy on making the Farm even better than it is, so if you have ideas please share.' data-title="Your Idea Here" class="tt">Your Idea here</label>
-                        <input type="radio" name="jobs" id="yourIdea3">
-                        <input type="text" name="jobs" id="yourIdea3" class="form-control" placeholder="Your Idea Here">
+                        <input type="checkbox" name="patron" id="yourIdea3">
+                        <input type="text" name="patron" id="yourIdea3" class="form-control" placeholder="Your Idea Here">
                     </div>
 
                 </form>
@@ -200,10 +200,10 @@
 
                     <div class="form-group">
                         <% if(dessert === 0) { %>
-                            <input type="radio" name="jobs" id="dessert" disabled>
+                            <input type="checkbox" name="potluck" id="dessert" disabled>
                              <label data-message="Please choose another option." data-title="Dessert" class="tt red" for="dessert">Dessert (<%= dessert %>)</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="dessert" value="dessert">
+                            <input type="checkbox" name="potluck" id="dessert" value="dessert">
                              <label data-message="Bring your favorite desert for the desert table (examples: cupcakes, pies, cakes, fruit tray, brownies, etc)." data-title="Dessert" class="tt" for="dessert">Dessert (<%= dessert %>)</label>
                         <% } %>
 
@@ -211,24 +211,24 @@
 
                     <div class="form-group">
                         <% if(tequila === 0) { %>
-                            <input type="radio" name="jobs" id="tequila" disabled>
+                            <input type="checkbox" name="potluck" id="tequila" disabled>
                             <label data-message="Please choose another option." data-title="Bottle of Tequila" class="tt red" for="tequila">Bottle of Tequila (<%= tequila %>)</label>
                         <% } else { %>
-                            <input type="radio" name="jobs" id="tequila" value="tequila">
+                            <input type="checkbox" name="potluck" id="tequila" value="tequila">
                             <label data-message="Bring your favorite bottle of Tequila or whatever you like to drink." data-title="Bottle of Tequila" class="tt" for="tequila">Bottle of Tequila (<%= tequila %>)</label>
                         <% } %>
 
                     </div>
 
                     <div class="form-group">
-                        <input type="radio" name="jobs" id="partyFavors" value="partyFavors">
+                        <input type="checkbox" name="potluck" id="partyFavors" value="partyFavors">
                         <label data-message="Bring your favorite party favors to share and contribute to the vibe." data-title="Party Favors" class="tt" for="partyFavors">Party Favors</label>
                     </div>
 
                     <div class="form-group">
                         <label for="openSelector" data-message='Want to bring a potluck item that is not mentioned above? Write it here!' data-title="Your Idea Here" class="tt">Your Idea here</label>
-                        <input type="radio" name="jobs" id="yourIdea2">
-                        <input type="text" name="jobs" id="yourIdea2" class="form-control" placeholder="Your Idea Here">
+                        <input type="checkbox" name="potluck" id="yourIdea2">
+                        <input type="text" name="potluck" id="yourIdea2" class="form-control" placeholder="Your Idea Here">
                     </div>
 
                 </form>
