got all yourIdea suggestions working and logging them out in email, spreadsheet, and paypal

--- a/public/css/includes/css/custom.css
+++ b/public/css/includes/css/custom.css
@@ -146,6 +146,12 @@ p {
   border: none;
   color: #979797;
 }
+.form-control[disabled] {
+  background: #000000;
+  border: none;
+  color: #979797;
+  opacity: 0.25;
+}
 .bwizard {
   position: relative;
 }
