--- a/public/js/app/templates/jobs.html
+++ b/public/js/app/templates/jobs.html
@@ -146,7 +146,7 @@
                     <div class="form-group">
                         <label for="openSelector" data-message='Want to participate in a way not mentioned above? Write it here!' data-title="Your Idea Here" class="tt">Your Idea here</label>
                         <input type="checkbox" name="participate" id="yourIdea1">
-                        <input type="text" name="participate" id="yourIdea1" class="form-control" placeholder="Your Idea Here">
+                        <input type="text" name="participate" id="yourIdea1Text" class="form-control" placeholder="Your Idea Here" disabled="true">
                     </div>
 
                 </form>
@@ -184,7 +184,7 @@
                     <div class="form-group">
                         <label for="openSelector" data-message='We are working to focus our energy on making the Farm even better than it is, so if you have ideas please share.' data-title="Your Idea Here" class="tt">Your Idea here</label>
                         <input type="checkbox" name="patron" id="yourIdea3">
-                        <input type="text" name="patron" id="yourIdea3" class="form-control" placeholder="Your Idea Here">
+                        <input type="text" name="patron" id="yourIdea3Text" class="form-control" placeholder="Your Idea Here" disabled="true">
                     </div>
 
                 </form>
@@ -228,7 +228,7 @@
                     <div class="form-group">
                         <label for="openSelector" data-message='Want to bring a potluck item that is not mentioned above? Write it here!' data-title="Your Idea Here" class="tt">Your Idea here</label>
                         <input type="checkbox" name="potluck" id="yourIdea2">
-                        <input type="text" name="potluck" id="yourIdea2" class="form-control" placeholder="Your Idea Here">
+                        <input type="text" name="potluck" id="yourIdea2Text" class="form-control" placeholder="Your Idea Here" disabled="true">
                     </div>
 
                 </form>
