fixed label for yourIdea

--- a/public/js/app/templates/jobs.html
+++ b/public/js/app/templates/jobs.html
@@ -138,14 +138,14 @@
                              <label data-message="Please choose another option." data-title="Host" class="tt red" for="host">Host (<%= host %>)</label>
                         <% } else { %>
                             <input type="checkbox" name="participate" id="host" value="host">
-                             <label data-message="CleHelp us hold the space and share good farm hospitatlity with our friends and family." data-title="Host" class="tt" for="host">Host (<%= host %>)</label>
+                             <label data-message="Help us hold the space and share good farm hospitatlity with our friends and family." data-title="Host" class="tt" for="host">Host (<%= host %>)</label>
                         <% } %>
 
                     </div>
 
                     <div class="form-group">
-                        <label for="openSelector" data-message='Want to participate in a way not mentioned above? Write it here!' data-title="Your Idea Here" class="tt">Your Idea here</label>
                         <input type="checkbox" name="participate" id="yourIdea1">
+                         <label for="yourIdea1" data-message='Want to participate in a way not mentioned above? Write it here!' data-title="Your Idea Here" class="tt">Your Idea here</label>
                         <input type="text" name="participate" id="yourIdea1Text" class="form-control" placeholder="Your Idea Here" disabled="true">
                     </div>
 
@@ -182,7 +182,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="openSelector" data-message='We are working to focus our energy on making the Farm even better than it is, so if you have ideas please share.' data-title="Your Idea Here" class="tt">Your Idea here</label>
+                        <label for="yourIdea3" data-message='We are working to focus our energy on making the Farm even better than it is, so if you have ideas please share.' data-title="Your Idea Here" class="tt">Your Idea here</label>
                         <input type="checkbox" name="patron" id="yourIdea3">
                         <input type="text" name="patron" id="yourIdea3Text" class="form-control" placeholder="Your Idea Here" disabled="true">
                     </div>
@@ -226,7 +226,7 @@
                     </div>
 
                     <div class="form-group">
-                        <label for="openSelector" data-message='Want to bring a potluck item that is not mentioned above? Write it here!' data-title="Your Idea Here" class="tt">Your Idea here</label>
+                        <label for="yourIdea2" data-message='Want to bring a potluck item that is not mentioned above? Write it here!' data-title="Your Idea Here" class="tt">Your Idea here</label>
                         <input type="checkbox" name="potluck" id="yourIdea2">
                         <input type="text" name="potluck" id="yourIdea2Text" class="form-control" placeholder="Your Idea Here" disabled="true">
                     </div>
